--- a/Xget URL 转换器.html
+++ b/Xget URL 转换器.html
@@ -104,7 +104,7 @@
             <p>如果您觉得这个工具有用，欢迎通过以下方式支持我们：</p>
             <div class="modal-links">
               <a
-                href="https://xi-xu.me/#sponsorships"
+                href="https://gitee.com/#sponsorships"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="modal-link"
@@ -208,7 +208,7 @@
           </p>
           <p class="footer-links">
             <a
-              href="https://xi-xu.me/#sponsorships"
+              href="https://gitee.com/#sponsorships"
               target="_blank"
               rel="noopener noreferrer"
               class="footer-link"
@@ -225,7 +225,7 @@
           <p class="footer-copyright">
             版权所有 &copy;2025
             <a
-              href="https://xi-xu.me"
+              href="https://gitee.com"
               target="_blank"
               rel="noopener noreferrer"
               class="footer-author-link"
