--- a/nas-product-comparison-showcase.html
+++ b/nas-product-comparison-showcase.html
@@ -48,10 +48,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/nas-product-comparison-showcase/index.css">
 </head>
 <body class="bg-slate-50 text-slate-800 antialiased">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="/nas-product-comparison-showcase/index.tsx"></script>
 </body>
 </html>
