--- a/语雀网页版加载速度优化研究报告.html
+++ b/语雀网页版加载速度优化研究报告.html
@@ -987,22 +987,22 @@
     <title>语雀网页版加载速度优化研究报告</title>
 
     <link
-      href="https://artifacts-cdn.chatglm.site/https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
+      href="/libs/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
     />
 
     <!-- 预加载字体 -->
     <link
       rel="preconnect"
-      href="https://artifacts-cdn.chatglm.site/https://fonts.googleapis.com"
+      href="https://fonts.googleapis.com"
     />
     <link
       rel="preconnect"
-      href="https://artifacts-cdn.chatglm.site/https://fonts.gstatic.com"
+      href="https://fonts.gstatic.com"
       crossorigin=""
     />
     <link
-      href="https://artifacts-cdn.chatglm.site/https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
