docs: 添加网页描述元标签
在网页头部添加了描述元标签，以提供更详细的页面信息，提高搜索引擎优化效果。

- 在`nas-product-comparison-showcase.html`中添加了描述元标签，内容为：“2025年全闪NAS旗舰产品深度对比分析，涵盖铁威马F8 SSD Plus、极空间Z4Pro+、绿联DXP4800 Plus、飞牛零刻ME mini等热门产品的价格、性能、配置对比，为NAS选购提供专业参考建议。”
- 在另一个HTML文件中添加了描述元标签，内容为：“2025年全闪NAS巅峰对决，提供全面的全闪NAS选购指南和产品对比，包含性能测试、配置分析、价格对比，帮助用户选择最适合的全闪存储解决方案，涵盖主流品牌和最新技术趋势。”

--- a/nas-product-comparison-showcase.html
+++ b/nas-product-comparison-showcase.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全闪NAS旗舰横评 - 2025</title>
+    <meta name="description" content="2025年全闪NAS旗舰产品深度对比分析，涵盖铁威马F8 SSD Plus、极空间Z4Pro+、绿联DXP4800 Plus、飞牛零刻ME mini等热门产品的价格、性能、配置对比，为NAS选购提供专业参考建议。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
