--- a/全闪NAS巅峰对决网站功能演示.html
+++ b/全闪NAS巅峰对决网站功能演示.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全闪NAS巅峰对决 - 2025年全闪NAS选购指南</title>
+    <meta name="description" content="2025年全闪NAS巅峰对决，提供全面的全闪NAS选购指南和产品对比，包含性能测试、配置分析、价格对比，帮助用户选择最适合的全闪存储解决方案，涵盖主流品牌和最新技术趋势。">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="styles/enhanced.css" rel="stylesheet">
     <style>
