docs: 更新网页头部以包含favicon
在nas-product-comparison-showcase.html和全闪NAS巅峰对决 - 2025年全闪NAS选购指南.html文件的头部添加了favicon链接，以在浏览器标签中显示网站图标。

style: 代码格式调整

在vite.config.ts文件中对导入语句的格式进行了调整，统一为使用双引号，并在导入语句中添加了适当的空格。此外，对esbuild配置进行了格式调整，使其更符合代码规范。

refactor: 重构vite配置

在vite.config.ts文件中重构了plugins数组，使其更具可读性。将esbuild配置单独提取到一个对象中，并添加了drop选项以移除console和debugger语句。同时，更新了build配置中的target和minify选项，以优化构建过程。

--- a/全闪NAS巅峰对决网站功能演示.html
+++ b/全闪NAS巅峰对决网站功能演示.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
+<head>  <link rel="icon" type="image/x-icon" href="Xget.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全闪NAS巅峰对决 - 2025年全闪NAS选购指南</title>
