--- a/nas-product-comparison-showcase.html
+++ b/nas-product-comparison-showcase.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN" class="scroll-smooth">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">  <link rel="icon" type="image/x-icon" href="Xget.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全闪NAS旗舰横评 - 2025</title>
     <meta name="description" content="2025年全闪NAS旗舰产品深度对比分析，涵盖铁威马F8 SSD Plus、极空间Z4Pro+、绿联DXP4800 Plus、飞牛零刻ME mini等热门产品的价格、性能、配置对比，为NAS选购提供专业参考建议。">
