--- a/全闪NAS巅峰对决网站功能演示.html
+++ b/全闪NAS巅峰对决网站功能演示.html
@@ -223,7 +223,7 @@
 
         /* Stats */
         .stats {
-            background: linear-gradient(135deg, #1E46EB, #1CA97E);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             padding: 60px 0;
             margin: 60px 0;
@@ -240,6 +240,8 @@
         .stat-item h3 {
             font-size: 2.5rem;
             margin-bottom: 10px;
+            color: #ffd700;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .stat-item p {
