--- a/nas-product-comparison-showcase.html
+++ b/nas-product-comparison-showcase.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="zh-CN" class="scroll-smooth">
-<head>
-    <meta charset="UTF-8">  <link rel="icon" type="image/x-icon" href="Xget.ico" />
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="Xget.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全闪NAS旗舰横评 - 2025</title>
-    <meta name="description" content="2025年全闪NAS旗舰产品深度对比分析，涵盖铁威马F8 SSD Plus、极空间Z4Pro+、绿联DXP4800 Plus、飞牛零刻ME mini等热门产品的价格、性能、配置对比，为NAS选购提供专业参考建议。">
+    <meta
+      name="description"
+      content="2025年全闪NAS旗舰产品深度对比分析，涵盖铁威马F8 SSD Plus、极空间Z4Pro+、绿联DXP4800 Plus、飞牛零刻ME mini等热门产品的价格、性能、配置对比，为NAS选购提供专业参考建议。"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./src/style.css">
-<script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/nas-product-comparison-showcase/index.css">
-</head>
-<body class="bg-slate-50 text-slate-800 antialiased">
+    <script type="importmap">
+      {
+        "imports": {
+          "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+          "react/": "https://aistudiocdn.com/react@^19.2.0/",
+          "react": "https://aistudiocdn.com/react@^19.2.0"
+        }
+      }
+    </script>
+    <link rel="stylesheet" href="/nas-product-comparison-showcase/index.css">
+  </head>
+  <body class="bg-slate-50 text-slate-800 antialiased">
     <div id="root"></div>
-<script type="module" src="/nas-product-comparison-showcase/index.tsx"></script>
-</body>
+    <script
+      type="module"
+      src="/nas-product-comparison-showcase/index.tsx"
+    ></script>
+  </body>
 </html>
